--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,18 @@
 </head>
 <body>
 
+<nav>
+    <div class="nav-wrapper black">
+      <img class="left" src="<%= asset_path('unb-logo.jpg') %>" alt="" style="width: 114px; height: 64px; padding-left: 30px;">
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+      	<li style="font-size: xx-large; padding-left: 10px;">Maratona UnB</li>  
+      </ul>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">About</a></li>
+      </ul>
+    </div>
+  </nav>
+
 <%= yield %>
 
 </body>
