--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,32 @@
     </ul>
   </div>
 </nav>
-
-<%= yield %>
+<div class="row">
+  <div class="col s2 indigo accent-2 sidenav">
+    <ul class="collection">
+      <li class="collection-item">
+        <a href="#">Home</a>
+      </li>
+      <li class="collection-item">
+        <a href="#">Provas Anteriores</a>
+      </li>
+      <li class="collection-item">
+        <a href="#">ICPC</a>
+      </li>
+      <li class="collection-item">
+        <a href="#">Other topic</a>
+      </li>
+      <li class="collection-item">
+        <a href="#">Other topic</a>
+      </li>
+    </ul>
+  </div>
+  <div class="col s10">
+    <div class="container">
+      <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
