--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -12,46 +12,20 @@
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
   <body>
-    <div class="row">
-    	<div class="col s2 indigo accent-2 sidenav">
-	    	<ul class="collection">
-		      <li class="collection-item">
-			    	<a href="#">Home</a>
-			    </li>
-			    <li class="collection-item">
-			    	<a href="#">Provas Anteriores</a>
-			    </li>
-			    <li class="collection-item">
-			    	<a href="#">ICPC</a>
-			    </li>
-			    <li class="collection-item">
-			    	<a href="#">Other topic</a>
-			    </li>
-			    <li class="collection-item">
-			    	<a href="#">Other topic</a>
-			    </li>
-		    </ul>
-    	</div>
-    	<div class="col s10">
-	    	<div class="container">
-					<div class="slider">
-				    <ul class="slides">
-			        <li>
-		            <img src="<%= asset_path('icpc-logo.png') %>" alt="" style="width: 100%; height: 100%;">
-				        <div class="caption center-align">
-				        </div>
-			        </li>
-			        <li>
-			          <img src="http://lorempixel.com/580/250/nature/2"> 
-				        <div class="caption left-align">
-				          <h3>Left Aligned Caption</h3>
-				          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-				        </div>
-			        </li>
-				    </ul>
-					</div>
-				</div>
-			</div>
+		<div class="slider">
+	    <ul class="slides">
+		    <li>
+			    <img src="<%= asset_path('icpc-logo.png') %>" alt="" style="width: 100%; height: 100%;">
+			    <div class="caption center-align"></div>
+		    </li>
+		    <li>
+		      <img src="http://lorempixel.com/580/250/nature/2"> 
+	        <div class="caption left-align">
+	          <h3>Left Aligned Caption</h3>
+	          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+	        </div>
+		    </li>
+	    </ul>
 		</div>
   </body>
 </html>
