favicon and home link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Maratonafga</title>
+  <title>MaratonaUnB</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="shortcut icon" type="image/jpg" href="<%= asset_path('logomdp.jpg') %>"/>
 </head>
 <body>
 
@@ -28,7 +29,7 @@
   <div class="col s2 indigo accent-2 sidenav">
     <ul class="collection">
       <li class="collection-item">
-        <a href="#">Home</a>
+        <a href="/">Home</a>
       </li>
       <li class="collection-item">
         <a href="#">Provas Anteriores</a>
