--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,19 +17,22 @@
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <% if user_signed_in? %>
-        <%= link_to("Hello " + current_user.email + ", Logout", destroy_user_session_path, :method => :delete) %>
+        <%= link_to("Olá " + current_user.email + ", Sair", destroy_user_session_path, :method => :delete) %>
       <% else %>
-        <%= link_to('Login', new_user_session_path)  %>  
+        <%= link_to('Entrar', new_user_session_path)  %>  
       <% end %>
-      <li><a href="sass.html">About</a></li>
+      <li><a href="sass.html">Sobre</a></li>
     </ul>
   </div>
 </nav>
+
+<% if notice %> <script type="text/javascript"> Materialize.toast('<%= notice %>', 5000) </script> <% end %> <% if alert %> <script type="text/javascript"> Materialize.toast('<%= alert %>', 5000) </script> <% end %>
+
 <div class="row">
   <div class="col s2 indigo accent-2 sidenav">
     <ul class="collection">
       <li class="collection-item">
-        <a href="/">Home</a>
+        <a href="/">Página Inicial</a>
       </li>
       <li class="collection-item">
         <a href="#">Provas Anteriores</a>
@@ -37,12 +40,14 @@
       <li class="collection-item">
         <a href="#">ICPC</a>
       </li>
-      <li class="collection-item">
-        <a href="#">Other topic</a>
-      </li>
-      <li class="collection-item">
-        <a href="#">Other topic</a>
-      </li>
+      <% if current_user.try(:admin?) %>
+        <li class="collection-item">
+          <%= link_to 'Nova Questão', new_question_path, method: :get%>
+        </li>
+        <li class="collection-item">
+          <%= link_to 'Novo Contest', new_contest_path, method: :get%>
+        </li>
+      <% end %>
     </ul>
   </div>
   <div class="col s10">
