--- a/app/views/contests/new.html.erb
+++ b/app/views/contests/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Contest</h1>
+<h1>Nova Prova</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', contests_path %>
+<p>
+	<%= link_to 'Back', contests_path, :class => "btn" %>
+</p>
