--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -28,10 +28,10 @@
 	    </ul>
 		</div>
 		<div>
-			<h2>Próximos Contests</h2>
+			<h2>Próximas Provas</h2>
 			<% if @next_contests.empty? %>
         <h5>
-        	Nenhum Contest cadastrado para os próximos dias.
+        	Nenhuma Prova cadastrada para os próximos dias.
         </h5>
       <% else %>
 				<table class="striped">
