--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,3 +3,13 @@
 .sidenav{
 	height: 700px;
 }
+
+.field select{
+	display: initial !important;
+	width: 30%;
+}
+
+.field label{
+	padding-top: 15px !important;
+	font-size: 20px;
+}
